@@ -19,7 +19,7 @@ class FoursquareOAuth2Adapter(OAuth2Adapter):
         # Foursquare needs a version number for their API requests as documented here https://developer.foursquare.com/overview/versioning
         resp = requests.get(self.profile_url,
                             params={'oauth_token': token.token, 'v': '20140116'})
-        extra_data = resp.json()
+        extra_data = resp.json()['response']['user']
         return self.get_provider().sociallogin_from_response(request,
                                                              extra_data)
 
