@@ -4,6 +4,8 @@
 
 	* Jack Shedd contributed Tumblr support, thanks!
 
+	* Romanos Tsouroplis contributed Foursquare support, thanks!
+
 2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* "excessivedemon" contributed Flickr support, thanks!
